--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 <h1>Hello world! What up</h1>
 <h2>did you take the survey?</h2>
+<img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fassets1.ignimgs.com%2F2020%2F09%2F30%2Fdwayne-johnson-young-rock-1601474701786.jpg%3Fwidth%3D1280&f=1&nofb=1">
