--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <h1>Hello world! What up</h1>
 <h2>did you take the survey?</h2>
-<img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fassets1.ignimgs.com%2F2020%2F09%2F30%2Fdwayne-johnson-young-rock-1601474701786.jpg%3Fwidth%3D1280&f=1&nofb=1">
+<img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fimages-na.ssl-images-amazon.com%2Fimages%2FI%2F51E8VR%2BokUL._SX258_BO1%2C204%2C203%2C200_.jpg&f=1&nofb=1">
