--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<title>WELCOME</title>
 <h1>Hello world! What up</h1>
 <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fimages-na.ssl-images-amazon.com%2Fimages%2FI%2F51E8VR%2BokUL._SX258_BO1%2C204%2C203%2C200_.jpg&f=1&nofb=1">
 <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.l5nJGFkl-5lkEJDyMaW1zwAAAA%26pid%3DApi&f=1">
