--- a/index.html
+++ b/index.html
@@ -83,19 +83,19 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Mentorship & Design Internship / Sugi International Ltd</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>June 2021 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
-          <p>Lorem ipsum dolor sit amet. Praesentium magnam consectetur vel in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde doloremque repellendus iure, iste.</p>
+          <p>I have been given the oppertunity to work alongside a managing director designing shoes using lisenced Warner Bros and Disney characters and properties alongside being mentored on the operations and managment of a high preforming trading company.</p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>House (Dynasty) Capitan/ West Island School</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2020 - Jan 2021</h6>
-          <p>Consectetur adipisicing elit. Praesentium magnam consectetur vel in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde doloremque repellendus iure, iste.</p>
+          <p>Working and communicating effectivly with teachers and students from a range of grades in my school to improve the school community, being selected from a shortlist of 40 candidites I have demonstrated what it takes to stand out and truly contribute to the greater school community. </p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Tournament Of the Minds Winner / Social Sciences Winner</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>May 2017 - May 2017</h6>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p><br>
+          <p>Interschool competition of 12 or more ESF and Non-ESF school teams I was able to secure the social sciences trophy being the first to do so for West Island School. </p><br>
         </div>
       </div>
 
